<resources>
    <string name="app_name">About ALC4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="alc_4_0">ALC 4.0</string>
    <string name="welcome_to">Welcome to</string>
    <string name="ssl_error_message">Oops! Looks like Certificate returned by the website is not one of those we trust. If you are sure of the website you can proceed though.</string>
    <string name="my_name">Odife Kennedy</string>
    <string name="android_developer">Android Developer</string>
    <string name="country">Country:</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="slack_username">Slack Username:</string>
    <string name="nigeria">Nigeria</string>
    <string name="my_email">kennedy***@gmail.com</string>
    <string name="my_phone">+234805******8</string>
    <string name="about_alc_4_0">About ALC 4.0</string>
    <string name="alc_with_google">ALC With Google 4.0</string>
</resources>
